// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expandable renders correctly opened 1`] = `
<DocumentFragment>
  .cache-7livzv-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: initial;
}

<div
    class="cache-7livzv-StyledExpandable e14o3tsk0"
  >
    Sample Expandable
  </div>
</DocumentFragment>
`;

exports[`Expandable renders correctly with className 1`] = `
<DocumentFragment>
  .cache-1xfr6hv-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0;
}

<div
    class="test cache-1xfr6hv-StyledExpandable e14o3tsk0"
  >
    Sample Expandable
  </div>
</DocumentFragment>
`;

exports[`Expandable renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-1xfr6hv-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0;
}

<div
    class="cache-1xfr6hv-StyledExpandable e14o3tsk0"
  >
    Sample Expandable
  </div>
</DocumentFragment>
`;

exports[`Expandable renders correctly with minHeight 1`] = `
<DocumentFragment>
  .cache-1xfr6hv-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0;
}

<div
    class="cache-1xfr6hv-StyledExpandable e14o3tsk0"
  >
    Sample Expandable
  </div>
</DocumentFragment>
`;
